kustomize/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluctua-nfts
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/enable-cors: "false"
spec:
  rules:
  - host: staging.apis.fluctuarecords.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fluctua-nfts
            port:
              number: 80
